[package]
name = "screensaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.5.0"
rand = "0.8.5"

[profile.release]
opt-level = 'z'
lto = 'thin'

[profile.dev.package."*"]
opt-level = 3